--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "react-scripts": "1.1.1"
   },
   "dependencies": {
+    "@pusher/chatkit-client": "^1.2.1",
+    "jwt-decode": "^2.2.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.0.4",
