--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-modal": "^3.8.1",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
