--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "enzyme": "^3.2.0"
   },
   "dependencies": {
+    "enzyme-adapter-react-16": "^1.1.1",
     "@pusher/chatkit-client": "^1.2.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.6.3",
